--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav{
     font-size: 2rem;
 }
 nav ul li{
-    display: inline;
+    display: inline-block;
     font-size: 2.6rem;
     vertical-align: middle;
     padding-left: .5rem;
