--- a/css/style.css
+++ b/css/style.css
@@ -35,17 +35,18 @@ nav{
     display: grid;
     justify-content: right;
     height: 10rem;
-    font-size: 2rem;
 }
 nav ul li{
     display: inline-block;
-    font-size: 2.6rem;
     vertical-align: middle;
     padding-left: .5rem;
 }
 nav ul li a{
     width: 100%;
-    font-size: 3rem;
+    font-size: 1.6rem;
+}
+nav ul li a:hover{
+    text-decoration: underline;
 }
 nav ul li a span{
     border-radius: 1rem;
@@ -60,13 +61,13 @@ nav ul li a{
 }
 nav ul li img{
     padding: 1rem;
-    max-width: 8rem;
+    max-width: 5rem;
     border-radius: 4rem;
 }
 main{
     padding-top: 5rem;
     text-align: center;
-    padding-bottom: 18rem;
+    padding-bottom: 16.5%;
 
 }
 main figure img{
@@ -77,11 +78,11 @@ main form{
     border-color: #ebecee;
 }
 main form .search_bar{
-    font-size: 2rem;
-    border: solid .3rem #ebecee;
+    font-size: 1.6rem;
+    border: solid .1rem #e2e2e2;
     border-radius: 3rem;
-    width: 80rem;
-    padding: 1.5rem;
+    width: 60rem;
+    padding: 1rem;
     margin: 1rem auto;
 }
 main form .search_bar:hover{
@@ -107,7 +108,11 @@ main p a:hover{
 footer{
     color: #4e4e4e;
     background-color: #f2f2f2;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+}
+hr{
+    color: #4d4d4d50 ;
 }
 footer section{
     text-align: center;
@@ -122,23 +127,26 @@ footer section ul{
 
 footer ul li a{
     color: #5c5b5b;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 600;
 }
 footer ul li a:hover{
     text-decoration: underline;
 }
 @media screen and (max-width: 70.0rem) {
+    main{
+        height: 60rem;
+    }
     main form .search_bar{
         width: 30rem;
     }
     footer{
-        height: 40rem;
+        height: 100%;
     }
     footer section ul{
         display: grid;
         text-align: justify;
-        grid-template-columns: repeat(2, 4fr);
+        grid-template-columns: repeat(1, 1fr);
         text-align: center;
     }
     footer section ul li{
